unpackaged/main/default/objects/Account/fields/Project_Status_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Project_Status_Indicator__c</fullName>
    <formula>IMAGE( 
CASE( Project_Status__c , &quot;Good&quot;, &quot;/resource/exclamation_green&quot;, &quot;Bad&quot;, &quot;/resource/exclamation_red&quot;, 
&quot;Warning&quot;, &quot;/resource/exclamation_orange&quot;, &quot;&quot;),&quot;&quot;,20,20)</formula>
    <label>z_Project Status Indicator</label>
    <type>Text</type>
</CustomField>