unpackaged/main/default/objects/Account/fields/QUEUE_Allocation__c.field-meta.xml
<CustomField>
    <fullName>QUEUE_Allocation__c</fullName>
    <label>QUEUE Allocation</label>
    <length>25</length>
    <type>Text</type>
</CustomField>