unpackaged/main/default/objects/Account/fields/Rate_Day__c.field-meta.xml
<CustomField>
    <fullName>Rate_Day__c</fullName>
    <description>Special Consulting Rate per Day</description>
    <inlineHelpText>Special Consulting Rate per Day</inlineHelpText>
    <label>Consulting Rate/Day</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>