unpackaged/main/default/objects/Account/fields/Rateable_Properties__c.field-meta.xml
<CustomField>
    <fullName>Rateable_Properties__c</fullName>
    <label>Rateable Properties</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>