unpackaged/main/default/objects/Account/fields/Reference_Rating__c.field-meta.xml
<CustomField>
    <fullName>Reference_Rating__c</fullName>
    <inlineHelpText>Updated from Reference Customer</inlineHelpText>
    <label>Reference Rating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>