unpackaged/main/default/objects/Account/fields/Reference_Star_Rating__c.field-meta.xml
<CustomField>
    <fullName>Reference_Star_Rating__c</fullName>
    <formula>IMAGE( 
CASE(Reference_Rating__c, &quot;1&quot;, &quot;/resource/stars_11&quot;, &quot;2&quot;, &quot;/resource/stars_21&quot;, 
&quot;3&quot;, &quot;/resource/stars_31&quot;,&quot;&quot;),&quot;&quot;,20,100)</formula>
    <label>Reference Star Rating</label>
    <type>Text</type>
</CustomField>