unpackaged/main/default/objects/Account/fields/Reflected__c.field-meta.xml
<CustomField>
    <fullName>Reflected__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Determines if an account is being kept warm.</inlineHelpText>
    <label>Caretaking</label>
    <type>Checkbox</type>
</CustomField>