unpackaged/main/default/objects/Account/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CountryArea__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>ACT</fullName>
            </value>
            <value>
                <fullName>New South Wales</fullName>
            </value>
            <value>
                <fullName>Northern Territory</fullName>
            </value>
            <value>
                <fullName>Queensland</fullName>
            </value>
            <value>
                <fullName>South Australia</fullName>
            </value>
            <value>
                <fullName>Tasmania</fullName>
            </value>
            <value>
                <fullName>Victoria</fullName>
            </value>
            <value>
                <fullName>Western Australia</fullName>
            </value>
            <value>
                <fullName>New Zealand North</fullName>
            </value>
            <value>
                <fullName>New Zealand South</fullName>
            </value>
            <value>
                <fullName>UK PS South</fullName>
            </value>
            <value>
                <fullName>UK PS Central</fullName>
            </value>
            <value>
                <fullName>UK HE</fullName>
            </value>
            <value>
                <fullName>UK North &amp; Scotland</fullName>
            </value>
            <value>
                <fullName>UK Other</fullName>
                <label>UK Other (USD)</label>
            </value>
            <value>
                <fullName>Indonesia</fullName>
            </value>
            <value>
                <fullName>Malaysia</fullName>
            </value>
            <value>
                <fullName>Mongolia</fullName>
            </value>
            <value>
                <fullName>Philippines</fullName>
            </value>
            <value>
                <fullName>Singapore</fullName>
            </value>
            <value>
                <fullName>Sri Lanka</fullName>
            </value>
            <value>
                <fullName>Vietnam</fullName>
            </value>
            <value>
                <fullName>Cook Islands</fullName>
            </value>
            <value>
                <fullName>Fiji</fullName>
            </value>
            <value>
                <fullName>Kiribati</fullName>
            </value>
            <value>
                <fullName>Nauru</fullName>
            </value>
            <value>
                <fullName>PNG</fullName>
            </value>
            <value>
                <fullName>Samoa</fullName>
            </value>
            <value>
                <fullName>Solomon Islands</fullName>
            </value>
            <value>
                <fullName>Timor-Leste</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>