unpackaged/main/default/objects/Account/fields/Revenue_Code__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Code__c</fullName>
    <label>Revenue Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>