unpackaged/main/default/objects/Account/fields/SaaS__c.field-meta.xml
<CustomField>
    <fullName>SaaS__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please DO NOT send ASM Listing to customer. Refer query to T1LicenceCodes.
Customers who pay subscription licence and are on T1 Cloud</inlineHelpText>
    <label>SaaS</label>
    <type>Checkbox</type>
</CustomField>