unpackaged/main/default/objects/Account/fields/SaaS_Cloud_Hosting__c.field-meta.xml
<CustomField>
    <fullName>SaaS_Cloud_Hosting__c</fullName>
    <formula>IF(SaaS__c &amp;&amp; Cloud_Hosting__c, &#39;SaaS/Cloud Hosting&#39;,
IF(SaaS__c, &#39;SaaS&#39;, 
IF(Cloud_Hosting__c, &#39;Cloud Hosting&#39;,
&#39;&#39;)))</formula>
    <label>SaaS/Cloud Hosting</label>
    <type>Text</type>
</CustomField>