unpackaged/main/default/objects/Account/fields/SDM__c.field-meta.xml
<CustomField>
    <fullName>SDM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Services Delivery Manager</description>
    <inlineHelpText>Used by Support Team</inlineHelpText>
    <label>SDM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>