unpackaged/main/default/objects/Account/fields/SDM_Email__c.field-meta.xml
<CustomField>
    <fullName>SDM_Email__c</fullName>
    <formula>SDM__r.Email</formula>
    <label>SDM Email</label>
    <type>Text</type>
</CustomField>