unpackaged/main/default/objects/Account/fields/SDM_Name__c.field-meta.xml
<CustomField>
    <fullName>SDM_Name__c</fullName>
    <formula>SDM__r.FirstName &amp; &#39; &#39; &amp; SDM__r.LastName</formula>
    <label>SDM Name</label>
    <type>Text</type>
</CustomField>