unpackaged/main/default/objects/Account/fields/Sector__c.field-meta.xml
<CustomField>
    <fullName>Sector__c</fullName>
    <formula>IF(ISPICKVAL(Vertical_Market__c, &#39;Government&#39;),&#39;Corporate&#39;,
 IF(ISPICKVAL(Vertical_Market__c,&#39;Education&#39;),&#39;Education&#39;,
 IF( ISPICKVAL(Vertical_Market__c,&#39;Financial Services&#39;),&#39;Corporate&#39;,
 IF( ISPICKVAL(Vertical_Market__c,&#39;Health and Community Services&#39;),&#39;Corporate&#39;,
 IF( ISPICKVAL(Vertical_Market__c,&#39;Corporate&#39;),&#39;Corporate&#39;,
 IF( ISPICKVAL(Vertical_Market__c,&#39;Local Government&#39;),&#39;AI/PI/LG&#39;,
 IF( ISPICKVAL(Vertical_Market__c,&#39;Asset Intensive&#39;),&#39;AI/PI/LG&#39;,
 IF( ISPICKVAL(Vertical_Market__c,&#39;Project Intensive&#39;),&#39;AI/PI/LG&#39;,
&#39;&#39;))))))))</formula>
    <label>Sector</label>
    <type>Text</type>
</CustomField>