unpackaged/main/default/objects/Account/fields/Service_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Service_Indicator__c</fullName>
    <formula>IF((SaaS__c = true || Cloud_Hosting__c = true) &amp;&amp; AMS__c = true, image(&quot;/resource/cloud&quot;,&quot;*&quot;, 24,24) + image(&quot;/resource/ams&quot;,&quot;*&quot;, 14,34),
IF((SaaS__c = true || Cloud_Hosting__c = true) &amp;&amp; AMS__c = false , image(&quot;/resource/cloud&quot;,&quot;*&quot;, 24,24),
IF(SaaS__c = false &amp;&amp; Cloud_Hosting__c = false &amp;&amp; AMS__c = true , image(&quot;/resource/ams&quot;,&quot;*&quot;, 14,34),
&quot;&quot;
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service</label>
    <type>Text</type>
</CustomField>