unpackaged/main/default/objects/Account/fields/Sub_group__c.field-meta.xml
<CustomField>
    <fullName>Sub_group__c</fullName>
    <label>z_Sub-Group</label>
    <length>100</length>
    <type>Text</type>
</CustomField>