unpackaged/main/default/objects/Account/fields/Support_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Support_Indicator__c</fullName>
    <formula>IMAGE( 
CASE(  Case_Status__c , &quot;Good&quot;, &quot;/resource/exclamation_green&quot;, &quot;Bad&quot;, &quot;/resource/exclamation_red&quot;, 
&quot;Warning&quot;, &quot;/resource/exclamation_orange&quot;, &quot;&quot;),&quot;&quot;,20,20)</formula>
    <label>Support Indicator</label>
    <type>Text</type>
</CustomField>