unpackaged/main/default/objects/Account/fields/Support_Live__c.field-meta.xml
<CustomField>
    <fullName>Support_Live__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the Customer entitled to Support</description>
    <inlineHelpText>Is the Customer entitled to Support</inlineHelpText>
    <label>Support Live</label>
    <type>Checkbox</type>
</CustomField>