unpackaged/main/default/objects/Account/fields/Support_SLA_Customer__c.field-meta.xml
<CustomField>
    <fullName>Support_SLA_Customer__c</fullName>
    <label>Support SLA Customer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Service Credits</fullName>
            </value>
            <value>
                <fullName>SLA Reporting</fullName>
            </value>
            <value>
                <fullName>Service Credits and SLA Reporting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>