unpackaged/main/default/objects/Account/fields/T1_Industry__c.field-meta.xml
<CustomField>
    <fullName>T1_Industry__c</fullName>
    <label>Segment</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Vertical_Market__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>State Government</fullName>
            </value>
            <value>
                <fullName>Federal Government</fullName>
            </value>
            <value>
                <fullName>Central Government</fullName>
            </value>
            <value>
                <fullName>Other Government</fullName>
            </value>
            <value>
                <fullName>Local Government</fullName>
            </value>
            <value>
                <fullName>Other Local Government</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Higher Education - University</fullName>
            </value>
            <value>
                <fullName>VET Sector - TAFE/Polytech</fullName>
            </value>
            <value>
                <fullName>Private Training Provider</fullName>
            </value>
            <value>
                <fullName>Education Research Institution</fullName>
            </value>
            <value>
                <fullName>K-12/Schools</fullName>
            </value>
            <value>
                <fullName>Other Education</fullName>
            </value>
            <value>
                <fullName>Banks, Credit Unions, Building Societies</fullName>
            </value>
            <value>
                <fullName>Wealth Management (Funds and Financial Advisors)</fullName>
            </value>
            <value>
                <fullName>Superannuation</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Property Investment</fullName>
            </value>
            <value>
                <fullName>Other Finance</fullName>
            </value>
            <value>
                <fullName>Aged, Disability and Community Care</fullName>
            </value>
            <value>
                <fullName>Community Services</fullName>
            </value>
            <value>
                <fullName>Health</fullName>
            </value>
            <value>
                <fullName>Housing</fullName>
            </value>
            <value>
                <fullName>Other Utilities</fullName>
            </value>
            <value>
                <fullName>Natural Resources Management</fullName>
            </value>
            <value>
                <fullName>Project-centric, Engineering and Mining</fullName>
            </value>
            <value>
                <fullName>Membership-based</fullName>
            </value>
            <value>
                <fullName>Media, Entertainment, Events and Facilities Managers</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Other Corporate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>