unpackaged/main/default/objects/Account/fields/T1Direct_CAM__c.field-meta.xml
<CustomField>
    <fullName>T1Direct_CAM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>T1Direct CAM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>