unpackaged/main/default/objects/Account/fields/Tax_Code_Name__c.field-meta.xml
<CustomField>
    <fullName>Tax_Code_Name__c</fullName>
    <description>Tax code assigned to the customer, max 1 per customer/account.</description>
    <inlineHelpText>Tax code assigned to this customer, max 1.</inlineHelpText>
    <label>Tax Code Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tax_Code_Name</valueSetName>
    </valueSet>
</CustomField>