unpackaged/main/default/objects/Account/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <label>z_Territory</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SDR - 1</fullName>
            </value>
            <value>
                <fullName>SDR - 2</fullName>
            </value>
            <value>
                <fullName>SDR - 3</fullName>
            </value>
            <value>
                <fullName>T1D - 1</fullName>
            </value>
            <value>
                <fullName>T1D - 2</fullName>
            </value>
            <value>
                <fullName>T1D - 3</fullName>
            </value>
            <value>
                <fullName>T1D - 4</fullName>
            </value>
            <value>
                <fullName>T1D - 5</fullName>
            </value>
            <value>
                <fullName>T1D - 6</fullName>
            </value>
            <value>
                <fullName>T1D - 7</fullName>
            </value>
            <value>
                <fullName>QLD - EDU - 1</fullName>
            </value>
            <value>
                <fullName>QLD - GOV - 1</fullName>
            </value>
            <value>
                <fullName>QLD - ASIFINCORP - 1</fullName>
            </value>
            <value>
                <fullName>QLD - HCSFINCORP - 1</fullName>
            </value>
            <value>
                <fullName>QLD - LG - 1</fullName>
            </value>
            <value>
                <fullName>QLD - LG - 2</fullName>
            </value>
            <value>
                <fullName>QLD - LG - 3</fullName>
            </value>
            <value>
                <fullName>NSW - ASI - 1</fullName>
            </value>
            <value>
                <fullName>NSW - EDU - 1</fullName>
            </value>
            <value>
                <fullName>NSW - EDU - 2</fullName>
            </value>
            <value>
                <fullName>NSW - GOVCORP - 1</fullName>
            </value>
            <value>
                <fullName>NSW - HCS - 1</fullName>
            </value>
            <value>
                <fullName>NSW - FIN - 1</fullName>
            </value>
            <value>
                <fullName>NSW - LG - 1</fullName>
            </value>
            <value>
                <fullName>NSW - LG - 2</fullName>
            </value>
            <value>
                <fullName>NSW - LG - 3</fullName>
            </value>
            <value>
                <fullName>NSW - LG - 4</fullName>
            </value>
            <value>
                <fullName>VIC - EDU - 1</fullName>
            </value>
            <value>
                <fullName>VIC - EDU - 2</fullName>
            </value>
            <value>
                <fullName>VIC - HCS - 1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>