unpackaged/main/default/objects/Account/fields/Total_ARR__c.field-meta.xml
<CustomField>
    <fullName>Total_ARR__c</fullName>
    <formula>Total_ASM__c + Total_Cloud__c + Total_Licence__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>