unpackaged/main/default/objects/Account/fields/Total_ASM__c.field-meta.xml
<CustomField>
    <fullName>Total_ASM__c</fullName>
    <description>Total ASM - AUD</description>
    <label>Total ASM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>