unpackaged/main/default/objects/Account/fields/Total_Cloud__c.field-meta.xml
<CustomField>
    <fullName>Total_Cloud__c</fullName>
    <label>Total Cloud</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>