unpackaged/main/default/objects/Account/fields/Total_Licence__c.field-meta.xml
<CustomField>
    <fullName>Total_Licence__c</fullName>
    <label>Total Licence</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>