unpackaged/main/default/objects/Account/fields/Vertical_Market__c.field-meta.xml
<CustomField>
    <fullName>Vertical_Market__c</fullName>
    <label>Industry/Vertical</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Education</fullName>
                <color>#0B6FCE</color>
                <label>Education</label>
            </value>
            <value>
                <fullName>Financial Services</fullName>
                <color>#78C953</color>
                <label>Financial Services</label>
            </value>
            <value>
                <fullName>Government</fullName>
                <color>#E27001</color>
                <label>Government</label>
            </value>
            <value>
                <fullName>Health and Community Services</fullName>
                <color>#A845DC</color>
                <label>Health and Community Services</label>
            </value>
            <value>
                <fullName>Asset Intensive</fullName>
                <color>#999999</color>
                <label>Asset Intensive</label>
            </value>
            <value>
                <fullName>Project Intensive</fullName>
                <color>#9999FF</color>
                <label>Project Intensive</label>
            </value>
            <value>
                <fullName>Local Government</fullName>
                <color>#F3D904</color>
                <label>Local Government</label>
            </value>
            <value>
                <fullName>Corporate</fullName>
                <color>#66E9BD</color>
                <label>Corporate</label>
            </value>
            <value>
                <fullName>Finance Adjustment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>