unpackaged/main/default/objects/Account/validationRules/Phone_No_Format_for_AsiaPacific.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_No_Format_for_AsiaPacific</fullName>
    <active>true</active>
    <errorConditionFormula>(TEXT(CountryArea__c) =&#39;Asia&#39; || TEXT(CountryArea__c) =&#39;Pacific&#39;)  &amp;&amp; 
NOT (REGEX(LEFT(Phone, 4) , &quot;[+][0-9]{2} &quot;) || 
REGEX(LEFT(Phone, 5) , &quot;[+][0-9]{3} &quot;)
)
 &amp;&amp;
NOT ISBLANK(Phone) &amp;&amp; NOT($Setup.T1_Control_Settings__c.Bypass_Validation_Rules__c)</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>International format required. Phone numbers must have Country code prefix followed by Area Code (where applicable) excluding leading 0, followed by subscriber number. Examples: +60 3 1234 5678, +675 123 5678</errorMessage>
</ValidationRule>