unpackaged/main/default/objects/Account/validationRules/Restrict_Account_Owner.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Account_Owner</fullName>
    <active>true</active>
    <description>Stop transfer of accounts by users.</description>
    <errorConditionFormula>($Profile.Name &lt;&gt; &quot;System Administrator&quot;)
&amp;&amp; $Profile.Name &lt;&gt; &quot;Operations&quot;
&amp;&amp; ISCHANGED(OwnerId)
&amp;&amp; NOT($Setup.T1_Control_Settings__c.Bypass_Validation_Rules__c)</errorConditionFormula>
    <errorDisplayField>OwnerId</errorDisplayField>
    <errorMessage>Please contact Sales Operations to transfer this account.</errorMessage>
</ValidationRule>