unpackaged/main/default/objects/Account/validationRules/Restrict_Customer_Account_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Customer_Account_Type</fullName>
    <active>true</active>
    <description>Restrict end users to change Customer, Ex-Customer and Shared Services Account Type.</description>
    <errorConditionFormula>(ISCHANGED(Type) ||  ISNEW() )
&amp;&amp; ($Profile.Name &lt;&gt; &#39;System Administrator&#39;) 
&amp;&amp; ($Profile.Name &lt;&gt; &#39;Operations&#39;) 
&amp;&amp; ( ISPICKVAL(Type, &#39;Customer&#39;) 
|| ISPICKVAL(Type, &#39;Ex-Customer&#39;)
|| ISPICKVAL(Type, &#39;Shared Services&#39;) 
|| TEXT(PRIORVALUE(Type)) = &#39;Customer&#39; 
|| TEXT(PRIORVALUE(Type)) = &#39;Ex-Customer&#39;
|| TEXT(PRIORVALUE(Type)) = &#39;Shared Services&#39;)
&amp;&amp; NOT($Setup.T1_Control_Settings__c.Bypass_Validation_Rules__c)</errorConditionFormula>
    <errorDisplayField>Type</errorDisplayField>
    <errorMessage>You do not have permission to change the Account Type. Please contact t1salesandmarketinghelpdesk@technologyonecorp.com for assistance.</errorMessage>
</ValidationRule>