unpackaged/main/default/objects/Account/validationRules/Termination_Date_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Termination_Date_Required</fullName>
    <active>true</active>
    <description>Termination Date is required when change Account type to the ex-customer.</description>
    <errorConditionFormula>TEXT(Type)=&#39;Ex-Customer&#39;
&amp;&amp; TEXT(PRIORVALUE(Type)) &lt;&gt; &#39;Ex-Customer&#39;  
&amp;&amp; ISBLANK(Termination_Date__c)</errorConditionFormula>
    <errorDisplayField>Termination_Date__c</errorDisplayField>
    <errorMessage>Please enter the ex-customer&#39;s Termination Date.</errorMessage>
</ValidationRule>