unpackaged/main/default/objects/Account/listViews/ACT_Accounts.listView-meta.xml
<ListView>
    <fullName>ACT_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Region__c</columns>
    <columns>Vertical_Market__c</columns>
    <columns>T1_Industry__c</columns>
    <columns>Priority__c</columns>
    <columns>Account_Status_indicator__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Region__c</field>
        <operation>equals</operation>
        <value>ACT</value>
    </filters>
    <label>ACT Accounts</label>
    <sharedTo>
        <group>ACT_Sales</group>
    </sharedTo>
</ListView>