unpackaged/main/default/objects/Account/listViews/All_Customer_Prospect.listView-meta.xml
<ListView>
    <fullName>All_Customer_Prospect</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>CountryArea__c</columns>
    <columns>Region__c</columns>
    <columns>Vertical_Market__c</columns>
    <columns>T1_Industry__c</columns>
    <columns>Priority__c</columns>
    <columns>Account_Status_indicator__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.LAST_UPDATE</columns>
    <columns>ACCOUNT.TYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All Customer/Prospect</label>
</ListView>